--- a/shelter/pages/pets/style2.scss
+++ b/shelter/pages/pets/style2.scss
@@ -80,7 +80,7 @@ h1 a {
   font-weight: 400;
   font-size: 32px;
   line-height: 110%;
-  /* or 35px */
+  // or 35px 
   letter-spacing: 0.06em;
   color: $color-dark-l;
   list-style: none;
@@ -93,7 +93,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 13px;
 line-height: 15px;
-/* identical to box height */
+// identical to box height 
 letter-spacing: 0.1em;
 color: $color-dark-3xl;
 padding-top: 8px;
@@ -108,7 +108,7 @@ padding-top: 8px;
   font-weight: 400;
   font-size: 15px;
   line-height: 160%;
-  /* identical to box height, or 24px */
+  // identical to box height, or 24px 
   color: $color-dark-3xl;
   display: inline;
   border-bottom: 3px solid $color-primary;
@@ -124,7 +124,7 @@ padding-top: 8px;
   list-style: none;
   text-decoration: none;
   padding-left: 35px;
-  /* identical to box height, or 24px */
+  // identical to box height, or 24px 
    }
   
   
@@ -143,7 +143,7 @@ padding-top: 8px;
     font-weight: 400;
     font-size: 35px;
     line-height: 130%;
-    /* or 45px */
+    // or 45px 
     letter-spacing: 0.06em;
   }
 
@@ -188,6 +188,7 @@ padding-top: 8px;
       background-color: $color-light-s;
       border-radius: 9px;
       cursor: pointer;
+      transition: 0.3s;
       &:hover {
        box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
        background-color: $color-light-xl;
@@ -245,7 +246,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 20px;
 line-height: 23px;
-/* identical to box height */
+// identical to box height 
 align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
@@ -266,7 +267,7 @@ padding-bottom: 30px;
 font-weight: 400;
 font-size: 17px;
 line-height: 130%;
-/* identical to box height, or 22px */
+// identical to box height, or 22px 
 letter-spacing: 0.06em;
 color: $color-dark-3xl;
 outline: none; // убирает рамку по умолчанию у кнопок
@@ -371,7 +372,7 @@ h4 {
   font-weight: 400;
   font-size: 20px;
   line-height: 115%;
-  /* identical to box height, or 23px */
+  // identical to box height, or 23px 
   letter-spacing: 0.06em;
   }
 
